--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container" id="cv-form">
       <h1 class="text-center my-2">Resume Generator</h1>
-      <p class="text-center my-2">By Tushar Dhama</p>
+      <p class="text-center my-2">By Aditi Pandey</p>
       <div class="row">
         <div class="col-md-6">
           <!--first column-->
@@ -41,10 +41,10 @@
             <input type="text" id="gitField" placeholder="Enter Here" class="form-control">
           </div>
           
-          <div class="form-group mt-2">
+          <!-- <div class="form-group mt-2">
             <label for="instaField"> Instagram </label>
             <input type="text" id="instaField" placeholder="Enter Here" class="form-control">
-          </div>
+          </div> -->
 
           <div class="form-group mt-2">
             <label for="linkedinField"> Linkedin </label>
@@ -100,26 +100,26 @@
             />
 
             <div class="container">
-                <p id="nameT1">Tushar Dhama</p>
-                <p id="contactT">+91 7500106844</p>
-                <p id="addressT">Pawala Begmabad Bhagpat India</p>
+                <p id="nameT1">Aditi Pandey</p>
+                <p id="contactT">+91 6307643165</p>
+                <p id="addressT">Ayodhya, Uttar Pradesh</p>
 
                 <hr />
                 <p>
-                    <a id="gitT" href="#1"> https://www.github.com/tushardhama</a>
+                    <a id="gitT" href="#1"> https://www.github.com/aditiP1830</a>
                 </p>
-                <p>
+                <!-- <p>
                     <a id="instaT" href="#1"> https://www.instagram.com/tushardhama</a>
-                </p>
+                </p> -->
                 <p>
-                    <a id="linkedT" href="#1"> https://www.linkedin.com/tushardhama</a>
+                    <a id="linkedT" href="#1"> https://www.linkedin.com/in/aditi-pandey-15918721b/</a>
                 </p>
                 
             </div>
         </div>
         <div class="col-md-8 py-5">
             <!-- second col-->
-            <h1 id="nameT2" class="text-center" style="font-weight: 970;">Tushar Dhama</h1>
+            <h1 id="nameT2" class="text-center" style="font-weight: 970;">Aditi Pandey</h1>
 
             <!--objective card-->
 
